Implemented skeleton xml and classes for cocktail detail, and cocktail edit activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
 
         <activity android:name=".NewDrinkActivity"></activity>
 
+        <activity android:name=".DrinkDetailsActivity"></activity>
+
+        <activity android:name=".DrinkEditActivity"></activity>
+
     </application>
 
 </manifest>
