--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,9 @@ dependencies {
 
 //  View Databases in browser
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
+
+//  Google Maps
+    implementation 'com.google.maps.android:maps-utils-ktx:2.1.3'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
 }
