--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,20 @@ android {
     packagingOptions {
         exclude 'META-INF/atomicfu.kotlin_module'
     }
+    sourceSets {
+        main {
+            res {
+                srcDirs 'src/main/res/layouts/rows',
+                        'src/main/res/layouts/navbar',
+                        'src/main/res/layouts/misc',
+                        'src/main/res/layouts/detailsFragments',
+                        'src/main/res/layouts/crud',
+                        'src/main/res/layouts',
+                        'src/main/res'
+            }
+        }
+    }
+
 }
 
 dependencies {
