--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <activity
-            android:name=".drink.AddDrinkActivity"
+            android:name=".drink.add.AddDrinkActivity"
             android:label="Add Drink">
         </activity>
 
