Added Ingredient Validations when adding a new drink and created associated unit tests

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         </activity>
 
         <activity
-            android:name=".drink.EditDrinkActivity"
+            android:name=".drink.edit.EditDrinkActivity"
             android:label="@string/title_edit_drink">
         </activity>
 
